--- a/main.css
+++ b/main.css
@@ -1,9 +1,21 @@
 header{background: #678DB2;
+margin-top: 0px;
+ 
 
 }
 body {
-		background:#91BADA; 
-		background-clip: 
+	margin-right:0px;
+	margin-left: 0px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	background-color:#91BADA ;
+}
+body .heading  {
+		background:#678DB2; 
+		margin-top: 0px;
+		border-top: 0px;
+		margin-bottom: 0px;
+
 	}
 a{
 	color:white;
@@ -12,11 +24,17 @@ body li {
 	float: left;
 	border-radius: 5px;
 	padding :7px;
+	margin-top: 0px;
 	margin-left: 5px;
-	white-space: 3px;
+
+	white-space: 0px;
 	display:inline-block;
 	background-size: 13px,500px;
 	background-color: #555;
+	border: 130px;
+	border-color: yellow;
+	border-width: 2px;
+
 
 }
 .linesev {
@@ -40,4 +58,12 @@ h1{
 	h3{
 		text-align: center;
 	}
-	
+	ul {
+		margin-top: 2px;
+	} 
+	.navbar{
+		background-image: none;
+		background-color:green;
+		border-color: orange;
+		
+	}
